k8s-resources/cheat-confluence-jenkins/confluence/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence
spec:
  selector:
    app: confluence
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
